Silva changes
=============

Silva 2.2a2 (unreleased)
------------------------

Ported from Silva 2.1
~~~~~~~~~~~~~~~~~~~~~

- Add a function sendmail which can send mail using Mailhost and
  Maildrophost in Zope 2.11 (otherwise Maildrophost is broken in Zope
  2.11).

- Display icons of members in tab_access, the user lookup screen, and
  group edition.

Bug fix
~~~~~~~

- Added condition in Container/tab_edit for objects that are both
  containers and content to show only one author name.

Silva 2.2a1 (2008-11-18)
------------------------

Features added
~~~~~~~~~~~~~~

- 261569: the new toc features made available in 2.1 are now
  accessible within documents by using the TOC code source (id:
  cs_toc).  This is part of service_codesources, and is copied into
  the Silva Root when SilvaExternalSources is installed.

- 101103: make addables functionality available within any type of
  Container, not just Publications

- Made the public page link in the tab space visible, styled as a tab.

- Silva is shipped with eggs by default.

- Silva root became a Five local site. You can activate others Five
  local site on publications. Afterwards, you will be able to add
  'local services' to these publications.

- Five (and grok) views are supported by default on content types.

- Formlib support have been added. You can create add, edit forms, and
  every others kind of SMI forms.

- Z3C Forms support have been added. You can to create add, edit
  forms, and every others kind of SMI forms.

- A new service have been added: service_customization. It let you
  customize layout-based templates. A customization marker (ZMI
  Content) let you tag your content. After you can customize a given
  template only for that marker.

- A ZMI tab called 'Customization' have been added on every Silva
  content. It let mark this content with a customization marker, which
  can be ZODB based, or file-system based.

- Preview have been refactored out to use a namespace (++preview++)